[package]
name = "qudp"
version = "0.1.0"
edition.workspace = true
description = "High-performance UDP encapsulation for QUIC"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["async", "socket", "udp", "gso", "gro"]
categories.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
cfg-if = { workspace = true }
libc = "0.2"
tracing = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["net"] }
nix = { version = "0.29.0", features = ["socket", "uio", "net"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Networking_WinSock",
] }

[dev-dependencies]
clap = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }

[dev-dependencies.tracing-subscriber]
workspace = true
features = ["env-filter", "time"]

[[example]]
name = "send"
path = "examples/send.rs"

[[example]]
name = "receive"
path = "examples/receive.rs"

[features]
default = ["gso"]
gso = []
