[package]
name = "quic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
qbase = { path = "../qbase" }
qrecovery = { path = "../qrecovery" }
bytes = "1"
thiserror = "1.0.21"
async-lock = "3.0.0"
