[package]
name = "quic"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
dashmap = { workspace = true }
deref-derive = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
qbase = { workspace = true }
qcongestion = { workspace = true }
qconnection = { workspace = true }
qrecovery = { workspace = true }
qudp = { workspace = true }
qunreliable = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
url = { workspace = true }
tokio = { features = ["fs"], workspace = true }

[[example]]
name = "client"

[[example]]
name = "connection"

[[example]]
name = "server"
