[package]
name = "quix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qbase = { path = "../qbase" }
bytes = "1"
thiserror = "1.0.21"
tinyvec = { version = "1.1", features = ["alloc"] }
nom = "7"
rustls = { version = "0.21.0", features = ["quic"] }
getset = "0.1.2"
rand = "0.8"
ring = "0.16"
libc = "0.2"
hex-literal = "0.4.0"
