[package]
name = "qunreliable"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
qbase = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
