[package]
name = "qunreliable"
version = "0.2.3"
edition.workspace = true
description = "Datagram transmission of gm-quic"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
qbase = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
